adding token table and design changes

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <meta name="theme-color" content="#ffffff">
   <meta name="title" content="Balancer Tools" />
   <meta name="description" content="Get the most out of the balancer platform." />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link
             href="//cdnjs.cloudflare.com/ajax/libs/KaTeX/0.9.0/katex.min.css"
